# emomcp

./: .gitignore  README.md  mcp_server.py  pyproject.toml  run.py
config/: default.yaml  emotions.db
src/emomcp/: __init__.py
src/emomcp/application/: dto.py  use_cases.py
src/emomcp/domain/: entities.py  repositories.py  services.py
src/emomcp/infrastructure/: config.py  sqlite_repositories.py
src/emomcp/presentation/: app.py
src/emomcp/presentation/routes/: emotions.py  funnels.py  health.py  marketing.py  neurotransmitters.py
tests/: conftest.py  test_api.py  test_domain.py  test_repositories.py  test_use_cases.py
